# Django-kubernetes

./: .gitignore  Makefile  README.rst  pyproject.toml
core/Core_Config/utils/: settings.py
core/core/settings/: __init__.py  base.py  custom.py  docker.py  envvars.py
core/core/settings/templates/: settings.dev.py
